<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tarok</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="plays">Insert maximum number of plays:</string>
    <string name="winScore">Insert winning score:</string>
    <string name="probability">Insert the winning probability of each game:</string>
    <string name="gameOn">Start game</string>
    <string name="title_activity_games">Games</string>
    <string name="column1">[num](game,player,diff)</string>
    <string name="stats">[stat1, stat2, stat3]</string>
    <string name="title_activity_game_play">GamePlay</string>
    <string name="playOnline">Play Online</string>
    <string name="title_activity_online_game">OnlineGame</string>

    <string-array name="cardDeck">
        <item>pik 7</item>
        <item>pik 8</item>
        <item>pik 9</item>
        <item>pik 10</item>
        <item>križ 7</item>
        <item>križ 8</item>
        <item>križ 9</item>
        <item>križ 10</item>
        <item>kara 4</item>
        <item>kara 3</item>
        <item>kara 2</item>
        <item>kara 1</item>
        <item>srce 4</item>
        <item>srce 3</item>
        <item>srce 2</item>
        <item>srce 1</item>
        <item>pik pub</item>
        <item>pik kavalj</item>
        <item>pik dama</item>
        <item>pik kralj</item>
        <item>križ pub</item>
        <item>križ kavalj</item>
        <item>križ dama</item>
        <item>križ kralj</item>
        <item>srce pub</item>
        <item>srce kavalj</item>
        <item>srce dama</item>
        <item>srce kralj</item>
        <item>kara pub</item>
        <item>kara kavalj</item>
        <item>kara dama</item>
        <item>kara kralj</item>
        <item>pagat</item>
        <item>tarok 2</item>
        <item>tarok 3</item>
        <item>tarok 4</item>
        <item>tarok 5</item>
        <item>tarok 6</item>
        <item>tarok 7</item>
        <item>tarok 8</item>
        <item>tarok 9</item>
        <item>tarok 10</item>
        <item>tarok 11</item>
        <item>tarok 12</item>
        <item>tarok 13</item>
        <item>tarok 14</item>
        <item>tarok 15</item>
        <item>tarok 16</item>
        <item>tarok 17</item>
        <item>tarok 18</item>
        <item>tarok 19</item>
        <item>tarok 20</item>
        <item>mond</item>
        <item>škis</item>
    </string-array>

    <string name="ok">OK</string>
    <string name="title_activity_selections">Selections</string>
    <string name="title_activity_dialog_play">DialogPlay</string>
    <string name="kraljPik">v piku</string>
    <string name="kraljKriz">v križu</string>
    <string name="kraljKara">v kari</string>
    <string name="kraljSrce">v srcu</string>
    
    <string-array name = "kralji">
        <item>v piku</item>
        <item>v križu</item>
        <item>v kari</item>
        <item>v srcu</item>
    </string-array>
    
    <string-array name = "vrednostIgre">
        <item>Tri</item>
        <item>Dva</item>
        <item>Ena</item>
        <item>Solo tri</item>
        <item>Solo dve</item>
        <item>Solo ena</item>
        <item>Berač</item>
        <item>Solo brez</item>
        <item>Odprti berač</item>
    </string-array>
    
    <string-array name = "possibleExtras">
        <item>Kralj</item>
        <item>Trula</item>
        <item>Pagat ultimo</item>
        <item>Kralj ultimo</item>
        <item>Valat</item>
        <item>Barvni valat</item>
    </string-array>

</resources>
