<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DialogPlay" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/vPiku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/kraljPik" />

        <RadioButton
            android:id="@+id/vKrizu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kraljKriz" />

        <RadioButton
            android:id="@+id/vKari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kraljKara" />

        <RadioButton
            android:id="@+id/vSrcu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kraljSrce" />
    </RadioGroup>

</LinearLayout>
